--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/product_image"
@@ -58,6 +59,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/product_image"
         app:layout_constraintTop_toBottomOf="@+id/shopping_cart"
@@ -72,6 +74,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/product_image"
         app:layout_constraintTop_toBottomOf="@+id/product_price"
@@ -88,7 +91,7 @@
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="@+id/product_quantity"
         app:layout_constraintTop_toBottomOf="@+id/add_quantity"
-        tools:text="@string/order_total" />
+        tools:text="Order Total: Rs 65000" />
 
     <Button
         android:id="@+id/checkout"
@@ -96,6 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/checkout"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/order_total"
         app:layout_constraintHorizontal_bias="0.414"
         app:layout_constraintStart_toStartOf="@+id/order_total"
@@ -112,7 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/product_quantity" />
 
     <Button
-        android:id="@+id/minus_quantity"
+        android:id="@+id/reduce_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
