--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -40,14 +40,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/product_image"
-        app:layout_constraintTop_toBottomOf="@+id/product_name"
+        app:layout_constraintTop_toBottomOf="@+id/product_short_description"
         tools:text="Price: Rs 65000" />
 
     <TextView
@@ -88,8 +88,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/product_quantity"
-        app:layout_constraintHorizontal_bias="0.538"
-        app:layout_constraintStart_toStartOf="@+id/product_quantity"
+        app:layout_constraintStart_toStartOf="@+id/reduce_quantity"
         app:layout_constraintTop_toBottomOf="@+id/add_quantity"
         tools:text="Order Total: Rs 65000" />
 
@@ -109,21 +108,35 @@
         android:id="@+id/add_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="20dp"
         android:text="+"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/product_quantity"
+        app:layout_constraintStart_toEndOf="@+id/reduce_quantity"
         app:layout_constraintTop_toBottomOf="@+id/product_quantity" />
 
     <Button
         android:id="@+id/reduce_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:text="-"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/add_quantity"
+        app:layout_constraintStart_toStartOf="@+id/product_quantity"
         app:layout_constraintTop_toBottomOf="@+id/product_quantity" />
+
+    <TextView
+        android:id="@+id/product_short_description"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="@+id/product_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/product_name"
+        app:layout_constraintTop_toBottomOf="@+id/product_name"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="This is a short description of the product" />
 </androidx.constraintlayout.widget.ConstraintLayout>
