--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -105,21 +105,21 @@
         android:id="@+id/add_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:text="+"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/product_quantity"
+        app:layout_constraintStart_toEndOf="@+id/reduce_quantity"
         app:layout_constraintTop_toBottomOf="@+id/product_quantity" />
 
     <Button
-        android:id="@+id/minus_quantity"
+        android:id="@+id/reduce_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
         android:layout_marginTop="16dp"
         android:text="-"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/add_quantity"
+        app:layout_constraintStart_toStartOf="@+id/product_quantity"
         app:layout_constraintTop_toBottomOf="@+id/product_quantity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
